--- a/pom.xml
+++ b/pom.xml
@@ -510,6 +510,18 @@
       <version>4.11</version>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.spockframework</groupId>
+      <artifactId>spock-core</artifactId>
+      <version>1.0-groovy-2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <!-- data source testing through JNDI -->
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-plus</artifactId>
